Fixed the JSON not importing-problem on the editor